--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@300;400;500;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./reset.css">
+
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/section_1.css">
+    <link rel="stylesheet" href="./styles/section_2e3.css">
+    <link rel="stylesheet" href="./styles/section_4.css">
+    <link rel="stylesheet" href="./styles/section_5.css">
+    <link rel="stylesheet" href="./styles/footer.css">
+
     <link rel="icon" href="./imagens/Logo.svg">
     <title>Alura books</title>
 </head>
